// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostPublishPanel should render the post-publish panel if the post is published 1`] = `
<div
  className="editor-post-publish-panel"
>
  <div
    className="editor-post-publish-panel__header"
  >
    <div
      className="editor-post-publish-panel__header-published"
    >
      Published
    </div>
    <ForwardRef(Button)
      aria-expanded={true}
      icon={
        <SVG
          viewBox="-2 -2 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
          />
        </SVG>
      }
      label="Close panel"
    />
  </div>
  <div
    className="editor-post-publish-panel__content"
  >
    <WithSelect(PostPublishPanelPostpublish)
      focusOnMount={true}
    />
  </div>
  <div
    className="editor-post-publish-panel__footer"
  >
    <CheckboxControl
      label="Always show pre-publish checks."
    />
  </div>
</div>
`;

exports[`PostPublishPanel should render the post-publish panel if the post is scheduled 1`] = `
<div
  className="editor-post-publish-panel"
>
  <div
    className="editor-post-publish-panel__header"
  >
    <div
      className="editor-post-publish-panel__header-published"
    >
      Scheduled
    </div>
    <ForwardRef(Button)
      aria-expanded={true}
      icon={
        <SVG
          viewBox="-2 -2 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
          />
        </SVG>
      }
      label="Close panel"
    />
  </div>
  <div
    className="editor-post-publish-panel__content"
  >
    <WithSelect(PostPublishPanelPostpublish)
      focusOnMount={true}
    />
  </div>
  <div
    className="editor-post-publish-panel__footer"
  >
    <CheckboxControl
      label="Always show pre-publish checks."
    />
  </div>
</div>
`;

exports[`PostPublishPanel should render the pre-publish panel if post status is scheduled but date is before now 1`] = `
<div
  className="editor-post-publish-panel"
>
  <div
    className="editor-post-publish-panel__header"
  >
    <div
      className="editor-post-publish-panel__header-publish-button"
    >
      <WithSelect(WithDispatch(PostPublishButton))
        focusOnMount={true}
        onSubmit={[Function]}
      />
    </div>
    <ForwardRef(Button)
      aria-expanded={true}
      icon={
        <SVG
          viewBox="-2 -2 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
          />
        </SVG>
      }
      label="Close panel"
    />
  </div>
  <div
    className="editor-post-publish-panel__content"
  >
    <WithSelect(PostPublishPanelPrepublish) />
  </div>
  <div
    className="editor-post-publish-panel__footer"
  >
    <CheckboxControl
      label="Always show pre-publish checks."
    />
  </div>
</div>
`;

exports[`PostPublishPanel should render the pre-publish panel if the post is not saving, published or scheduled 1`] = `
<div
  className="editor-post-publish-panel"
>
  <div
    className="editor-post-publish-panel__header"
  >
    <div
      className="editor-post-publish-panel__header-publish-button"
    >
      <WithSelect(WithDispatch(PostPublishButton))
        focusOnMount={true}
        onSubmit={[Function]}
      />
    </div>
    <ForwardRef(Button)
      aria-expanded={true}
      icon={
        <SVG
          viewBox="-2 -2 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
          />
        </SVG>
      }
      label="Close panel"
    />
  </div>
  <div
    className="editor-post-publish-panel__content"
  >
    <WithSelect(PostPublishPanelPrepublish) />
  </div>
  <div
    className="editor-post-publish-panel__footer"
  >
    <CheckboxControl
      label="Always show pre-publish checks."
    />
  </div>
</div>
`;

exports[`PostPublishPanel should render the spinner if the post is being saved 1`] = `
<div
  className="editor-post-publish-panel"
>
  <div
    className="editor-post-publish-panel__header"
  >
    <div
      className="editor-post-publish-panel__header-publish-button"
    >
      <WithSelect(WithDispatch(PostPublishButton))
        focusOnMount={true}
        onSubmit={[Function]}
      />
    </div>
    <ForwardRef(Button)
      aria-expanded={true}
      icon={
        <SVG
          viewBox="-2 -2 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <Path
            d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
          />
        </SVG>
      }
      label="Close panel"
    />
  </div>
  <div
    className="editor-post-publish-panel__content"
  >
    <Spinner />
  </div>
  <div
    className="editor-post-publish-panel__footer"
  >
    <CheckboxControl
      label="Always show pre-publish checks."
    />
  </div>
</div>
`;
